@@ -263,11 +263,16 @@ Release 0.8.0 - unreleased
 
   BUG FIXES
 
-    TAJO-640: In inner join clause, empty table can cause a error by order-by clause. (jaehwa)
+    TAJO-638: QueryUnitAttempt causes Invalid event error: TA_UPDATE at
+    TA_ASSIGNED. (hyunsik)
+
+    TAJO-640: In inner join clause, empty table can cause a error by order-by
+    clause. (jaehwa)
 
     TAJO-635: Improve tests of query semantic verification. (hyunsik)
 
-    TAJO-620: A join query can cause IndexOutOfBoundsException if one of tables is empty. (jaehwa)
+    TAJO-620: A join query can cause IndexOutOfBoundsException if one of
+    tables is empty. (jaehwa)
 
     TAJO-628: The second stage of distinct aggregation can be scheduled to
     only one node. (hyunsik)
